<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboclaw_hardware</name>
  <version>0.0.0</version>
  <description>ROS</description>
  <maintainer email="rishikesavanramesh@proton.me">RishikesavanRamesh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <depend>claw_api</depend>

  <depend>ros2_control_test_assets</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
